Fix 1px jumping when moving around the list.

--- a/styles/tab-switcher.less
+++ b/styles/tab-switcher.less
@@ -47,7 +47,7 @@ ol.tab-switcher-tab-list {
   }
 
   li:not(.selected) {
-    border-top: solid 2px rgba(0, 0, 0, 0);
-    border-bottom: solid 2px rgba(0, 0, 0, 0);
+    border-top: solid 1px transparent;
+    border-bottom: solid 1px transparent;
   }
 }
